# Course_work

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  settings.h
algorithms/: common_array.c  common_array.h  hybrid_select_1_exchange.c  hybrid_select_1_exchange.h  memory_access_test.c  memory_access_test.h  select_6_sorting.c  select_6_sorting.h  shell_1_sorting.c  shell_1_sorting.h
time_measurement/: measure_options.c  measure_options.h  time_measurement_processing.c  time_measurement_processing.h
user_interface/: menu.c  menu.h  spreadsheet.c  spreadsheet.h
